kube-files/deployment-java-api.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deployment-java-api
spec:
  replicas: 2
  selector:
    matchLabels:
      app: java-api
  template:
    metadata:
      labels:
        app: java-api
    spec:
      containers:
        - name: java-api
          image: iesodias/java-api:latest
          ports:
            - containerPort: 8081
