kube-files/java-api-hpa.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: java-api-hpa
spec:
  replicas: 1
  selector:
    matchLabels:
      app: java-api-hpa
  template:
    metadata:
      labels:
        app: java-api-hpa
    spec:
      containers:
        - name: java-api
          image: iesodias/java-api:latest
          ports:
            - containerPort: 8081
          resources:
            requests:
              memory: "128Mi"
              cpu: "100m"
            limits:
              memory: "256Mi"
              cpu: "200m"
        - name: stress
          image: progrium/stress
          command: ["stress"]
          args: ["--cpu", "1"]
          resources: 
            limits:
              cpu: "300m"
            requests:
              cpu: "100m"
