kube-files/java-api-ingress-nip.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deployment-java-api
  namespace: default
spec:
  replicas: 2
  selector:
    matchLabels:
      app: java-api
  template:
    metadata:
      labels:
        app: java-api
    spec:
      containers:
        - name: java-api
          image: iesodias/java-api:latest
          ports:
            - containerPort: 8081

---
apiVersion: v1
kind: Service
metadata:
  name: java-api-service
  namespace: default
spec:
  selector:
    app: java-api
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8081

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: java-api-ingress
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: java-api.74.235.27.214.nip.io
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: java-api-service
              port:
                number: 80
